# animation-flow

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  signup_response.json  task.md  verify_endpoints.sh  verify_jenko.py  verify_jenko_category.py  verify_jenko_export.py  verify_jenko_new.py  verify_jenko_optional_tags.py  verify_jenko_ratelimit.py  verify_jenko_status_price.py  verify_jenko_unique_export.py  verify_video.sh
app/: main.py
app/core/: error_handling.py  logging.py
app/db/: mongodb.py  redis.py
app/interfaces/: image_provider.py  video_provider.py
app/models/: asset.py  prompt_template.py  scenario.py  user.py
app/routers/: assets.py  auth.py  video.py
app/services/: graph.py
backend/: Dockerfile  README.md  pyproject.toml  vercel.json
backend/app/: .env.example  main.py
backend/app/core/: config.py  llm_factory.py  security.py
backend/app/core/agent/: graph.py  image_agent.py  prompts.py  video_agent.py
backend/app/db/: redis.py
backend/app/interfaces/: video_provider.py
backend/app/models/: image_data.py  user.py
backend/app/routers/: agent.py  jenko.py  scenarios.py  video.py
backend/scripts/: verify_assets.sh  verify_scenarios.sh
frontend/: .env.example  index.html
frontend/src/: App.jsx
frontend/src/components/: Modal.jsx
frontend/src/pages/: GenerateImage.jsx  Home.jsx  Login.jsx
